testdata/good/before/comp/section.tw
<section>@component('box')@slot@end</section>