testdata/bad/undefined-named-provideif/index.tw
<p>@component('user')@provideif(true, 'name')TEST@end@end</p>